[tool.poetry]
name = "datastore-sdk"
version = "0.1.0"
description = "Tally's Datastore SDK"
authors = ["Riley Seaman <rileyseaman.com>", "Steven Brotherton <sbrotherton@restreamsolutions.com>", "Artem Prokopenko <aprokopenko@restreamsolutions.com>"]
license = "MIT"
readme = "README.md"
packages = [
  { include = "datastore_sdk" }
]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
requests = "^2.0.0"
python-dateutil = ">=2.9.0"
httpx = "^0.27.0"
ijson = "^3.4.0"
aiohttp = "^3.12.0"
aiofiles = "^24.1.0"
pandas = "^2.0.0"
websocket-client = "^1.8.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
notebook = "^7.0.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
