[project]
name = "restreamsolutions"
version = "0.3.0"
description = "ReStream Datastore SDK"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10,<4.0"
authors = [
  { name = "Riley Seaman", email = "rseaman@restreamsolutions.com" },
  { name = "Steven Brotherton", email = "sbrotherton@restreamsolutions.com" },
  { name = "Artem Prokopenko", email = "aprokopenko@restreamsolutions.com" }
]

dependencies = [
  "requests>=2.0.0",
  "python-dateutil>=2.9.0",
  "httpx>=0.27.0",
  "ijson>=3.4.0",
  "aiohttp>=3.13.1",
  "aiofiles>=24.1.0",
  "pandas>=2.0.0",
  "websocket-client>=1.8.0",
]

keywords = ["datastore", "sdk", "restreamsolutions", "api"]
classifiers = [
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries",
  "Topic :: Internet :: WWW/HTTP"
]

[project.urls]
Homepage = "https://restreamsolutions.com/"
Repository = "https://github.com/ReStream-Solutions/restreamsolutions"
Changelog = "https://github.com/ReStream-Solutions/restreamsolutions/blob/main/CHANGELOG.md"

[tool.black]
line-length = 120
skip-string-normalization = 1

[tool.poetry]
packages = [
  { include = "restreamsolutions" }
]

[tool.poetry.group.dev.dependencies]
black = ">=25.0.0"
pytest = ">=8.0.0"
pytest-asyncio = ">=0.23.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
